--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 DerivedData/
 
 ## Various settings
+.DS_Store
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -15,7 +16,7 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata/
+xcuserdata/*.xcuserstate
 
 ## Other
 *.moved-aside
@@ -47,6 +48,7 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
+PodfilePodfile.lockPods
 
 # Carthage
 #
