FIXED - .gitignore Pods

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata/*.xcuserstate
+xcuserdata/
+*.xcuserstate
 
 ## Other
 *.moved-aside
@@ -48,7 +49,9 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
-PodfilePodfile.lockPods
+Podfile
+Podfile.lock
+Pods
 
 # Carthage
 #
